# DataFlow

./: README-zh.md  README.md  dt.sh  get_qwen.py  load.py  pyproject.toml  text_to_qa_pipeline.py
api_pipelines/: README.md  agentic_rag_multihop_core_pipeline.py  agentic_rag_pipeline.py  chemistry_smiles.py  code_code_to_sft_data_pipeline.py  code_gen_dataset_pipeline.py  core_text_bencheval_semantic_pipeline.py  core_text_bencheval_semantic_pipeline_question.py  core_text_bencheval_semantic_pipeline_question_single_step.py  func_call_synthesis.py  kbcleaning_pipeline.py  pdf_vqa_extract_pipeline.py  reasoning_diy_pipeline.py  reasoning_general_pipeline.py  reasoning_math_pipeline.py  reasoning_pretrain_pipeline.py  text2qa_pipeline.py  text2sql_pipeline_gen.py  text2sql_pipeline_refine.py  text2vecsql_pipeline_gen.py  text_conversation_synthesis_pipeline.py  text_sft_synthesis_pipeline.py
core_text/: prompted_eval.py  prompted_filter.py  prompted_refine.py
cpu_pipelines/: code_pt_filter.py  kbcleaning_pipeline_url.py  reasoning_pipeline.py  text2sql_pipeline.py  text_pt_filter.py  text_sft_filter.py
dataflow/: cli.py  pyproject.toml  text_to_qa_pipeline.py
dataflow/cli_funcs/: cli_pdf.py  cli_text.py  cli_webui.py
dataflow/prompts/: text2sql.py
dataflow/serving/: local_model_llm_serving.py
example_data/AgenticRAGPipeline/: eval_test_data.jsonl  multihop_pipeline_data.jsonl
example_data/CodePipeline/: code_input.jsonl  code_synthesis_input.jsonl  raw_code.jsonl
example_data/DataflowAgent/: agent_test_data.json  mq_test_data.jsonl
example_data/FuncCallPipeline/: chat_data.jsonl
example_data/GeneralTextPipeline/: abbreviation.jsonl  filtering.json  math_100.jsonl  pandas.json  pt_input.jsonl  sft_input.jsonl  translation.jsonl
example_data/KBCleaningPipeline/: kbc_playground.jsonl  kbc_test.jsonl
example_data/PDF2VQAPipeline/: vqa_extract_test.jsonl
example_data/ReasoningPipeline/: pipeline_general.json  pipeline_general_short.json  pipeline_math_short.json
example_data/SpeechTranscription/: pipeline_speechtranscription.jsonl
example_data/Text2SQLPipeline/: pipeline_refine.jsonl
example_data/VQA/: pic_path.json
example_data/chemistry/: matched_sample_10.json
example_data/core_text_data/: bench_eval_data.jsonl  double_column_input.json  eval_data.json  unified_bench_eval_type1.jsonl  unified_bench_eval_type2.jsonl  unified_bench_eval_type3.jsonl  unified_bench_eval_type4.jsonl  unified_bench_eval_type5.jsonl  unified_bench_eval_type6.jsonl
gpu_pipelines/: core_text_bencheval_match_pipeline.py  reasoning_math_pipeline.py  speechtranscription_pipeline.py  text2sql_pipeline_gen.py  text2sql_pipeline_refine.py  text_pt_filter.py  text_pt_synthetic.py  text_sft_filter.py  text_sft_synthetic.py
gpu_pipelines/benchmark_eval/: unified_bench_eval_type1.py  unified_bench_eval_type2.py  unified_bench_eval_type3.py  unified_bench_eval_type4.py  (+3 more)
playground/: kbcleaning_pipeline_vllm.py  mathbook_extract.py  quick_evaluate.py  reasoning_general_pipeline.py  text_conversation_synthesis_pipeline.py  text_sft_synthesis_from_scratch.py  text_sft_synthesis_from_seed.py  vqa.py
simple_text_pipelines/: pt_simple_filter.py  sft_from_scratch.py
(+65 files in other folders)
