[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-dataflow"
authors = [
    {name = "Hao Liang", email = "hao.liang@stu.pku.edu.cn"},
    {name = "Xiaochen Ma", email = "xiaochen.ma.cs@gmail.com"},
]
description = "Modern Data Centric AI system for Large Language Models"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12, <4"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: Free For Educational Use",
    "Programming Language :: Python :: 3",
    # "Programming Language :: Python :: 3.7",
    # "Programming Language :: Python :: 3.8",
    # "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = [
    "AI",
    "artificial intelligence",
]
dynamic = ["version", "dependencies"]

[project.urls]
Github = "https://github.com/OpenDCAI/DataFlow"
Documentation = "https://opendcai.github.io/DataFlow-Doc/"
"Bug Reports" = "https://github.com/OpenDCAI/DataFlow/issues"

[project.scripts]
dataflow = "dataflow.cli:app"

[tool.setuptools]
include-package-data = true
packages = ["dataflow"]  # 显式指定主包


[tool.setuptools.dynamic]
version = {attr = "dataflow.version.__version__"}
dependencies = {file = "requirements.txt"}


[project.optional-dependencies]
test = ["flask", "setuptools<=81.0.0", "rayorch"] # https://setuptools.pypa.io/en/latest/pkg_resources.html & https://github.com/dgtlmoon/changedetection.io/pull/2424
vllm =["vllm>=0.7.0,<=0.9.2", "numpy<2.0.0"]
#vllm07 = ["vllm<0.8", "numpy<2.0.0"]
#vllm08 = ["vllm<0.9"]
# 要求numpy版本大于1.24小于2.0.0
#kbc = ["vllm==0.6.3", "mineru[pipeline]==2.0.6"]
kbc = ["vllm>=0.6.3", "mineru[pipeline]==2.5.0"]
mineru = ["mineru[all]", "numpy>=1.24,<2.0.0", "sglang[all]>=0.4.8", "pypdf", "reportlab"]
myscale = ["clickhouse-driver"]
sglang =["sglang[all]"]
litellm = ["litellm>=1.70.0,<2.0.0"]
audio = ['librosa', 'soundfile']
vectorsql = ["sqlite-vec", "sqlite-lembed", "sentence_transformers"]
# 当前pdf2model环境不支持muxi
pdf2model =[
    "llamafactory[torch,metrics]>=0.9.0",
    "vllm>=0.7.0,<0.9.2", 
    "numpy>=1.24,<2.0.0",
    "mineru[pipeline]",
    "mineru-vl-utils",
    "flash-mineru"
]
# 为pdf2model接入dataflex所需的依赖配置
pdf2model-dataflex =[
    "gradio>=4.38.0,<=5.13.0",
    "llamafactory[torch,metrics]>=0.9.4",
    "vllm>=0.7.0,<0.9.0",     #0.8.0    
    "transformers>=4.48.1,<=4.52.0", 
    "tokenizers>=0.19.0,<=0.21.1",
    "datasets>=2.16.0,<=3.2.0",      
    "fsspec<=2024.9.0",              
    "numpy>=1.24,<2.0.0",
    "mineru[pipeline]",
    "mineru-vl-utils",
    "flash-mineru"
]
eval =[
    "vllm>=0.7.0,<0.9.2"
]
rag = ["lightrag-hku", "asyncio"]
pdf2vqa=["mineru[vlm]>=2.5.0,<2.7.0"]

flash-mineru = ["flash-mineru"]
ray = ["rayorch"] 
